Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-25897

ObjectRegistry incorrectly increments Item count when deleting an Item

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 5.0.0, 5.1.0
    • 4.6.0, 4.6.1, 4.6.2, 4.6.3, 5.0.0
    • couchbase-bucket
    • None
    • Untriaged
    • Yes

    Description

      As identified by Hui Wang, ObjectRegistry::onDeleteItem is incorrectly incrementing the numItem item stat instead of decrementing it.

      This bug was introduced in 4.6.0 (change http://review.couchbase.org/#/c/69951/8/src/objectregistry.cc). Note we don't "use" that stat for anything (other than for debug), so this doesn't have any direct end-user impact. However, the incorrect tracking means we cannot tell how many Item objects currently exist.

      Attachments

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty