MB-25897: ObjectRegistry: decrement numItem when Items are deleted

ObjectRegistry::onDeleteItem was incorrectly incrementing numItem
instead of decrementing.

This is a regression since 8bf14273
(http://review.couchbase.org/#/c/69951/8), introduced in 4.6.0.

Change to decrement; and add regression test.

Change-Id: Id5af53c66c434848523dce0faded2890a408c571
Reviewed-on: http://review.couchbase.org/83016
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Build Bot <build@couchbase.com>